# rust-rest-api-boilerplate

./: .gitignore  Cargo.toml  Makefile  grpc-demo-db.session.sql  script.js
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/users/: create_user.rs  mod.rs
src/domain/: mod.rs
src/domain/dto/: user_dto.rs
src/domain/entities/: mod.rs
src/domain/ports/: mod.rs
src/infrastructure/: database.rs
src/repository/: mod.rs
src/repository/models/: users.rs
src/repository/user_repo/: mod.rs
src/services/: mod.rs
src/services/user_service/: mod.rs
